# refund-returns-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: APPROACH_B_EVIDENCE.md  COLAB_RUNBOOK.md  GITHUB_SETUP.md  METRICS.md  ONLINE_DEPLOYMENT.md  PORTFOLIO_REPORT.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_SUMMARY.md
eval/: conversation_eval.py  human_eval.md  stack_smoke.py
eval/results/: conversation_eval_report.json  conversation_transcripts.jsonl  demo_scenarios.json  final_audit_report.json  ship_ready_gate.json
infra/db/: init.sql
pipelines/: build_conversation_dataset.py
scripts/: build_release_bundle.py  demo_scenarios.py  final_audit.py  generate_manifest.py  generate_metrics_snapshot.py  generate_portfolio_report.py  release_prep.py  ship_ready_gate.py
services/agent_server/app/: chat_flow.py  main.py  schemas.py  tool_client.py
services/tool_server/app/: config.py  main.py  models.py  (+2 more)
services/ui/: app.py
tests/: test_chat_flow_checkpoint1.py  test_conversation_dataset_builder.py  test_conversation_eval.py  test_demo_scenarios.py  test_dpo_prep.py  test_final_audit.py  test_manifest.py  test_metrics_snapshot.py  test_portfolio_report.py  test_release_bundle.py  test_release_prep.py  test_sft_prep.py  test_ship_ready_gate.py  test_tools.py  test_ui_smoke.py
training/: dpo_train.py  sft_train.py
