[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["services*"]

[project]
name = "policyLLM-support-bot"
version = "0.1.0"
description = "Stateful policy-grounded customer support chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "streamlit>=1.38.0,<2.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "python-dotenv>=1.0.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0"
]
train = [
  "transformers>=4.44.0,<5.0.0",
  "datasets>=2.20.0,<3.0.0",
  "accelerate>=1.0.0,<2.0.0",
  "peft>=0.12.0,<1.0.0",
  "trl>=0.10.0,<1.0.0",
  "bitsandbytes>=0.43.0,<1.0.0",
  "sentencepiece>=0.2.0,<1.0.0",
  "safetensors>=0.4.0,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "E402", "I001"]
